--- a/baseProject/src/php/web-root/assets/css/screen.css
+++ b/baseProject/src/php/web-root/assets/css/screen.css
@@ -1,6 +1,235 @@
-/**
- * This could be an example for a header file, but its really a test that this ends up in the final file
- * after minification.
- */
-body{background-color:white;}
-body{background-color:white;}body{background-color:white;}body{background-color:white;}body{background-color:white;}body{background-color:white;}html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent;}body{line-height:1;}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}nav ul{list-style:none;}blockquote,q{quotes:none;}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;}ins{background-color:#ff9;color:#000;text-decoration:none;}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold;}del{text-decoration:line-through;}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help;}table{border-collapse:collapse;border-spacing:0;}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0;}input,select{vertical-align:middle;}body{font-size:16px;line-height:1.2em;font-family:Arial,sans-serif;color:#111;background-color:#f5f5f5;}h1{font-size:3em;line-height:1.2em;margin:0 0 .5em 0;}h2{font-size:2em;line-height:1.2em;margin:1em 0 .6em 0;}h3{font-size:1.5em;line-height:1.2em;margin:1em 0 .5em 0;}h4{font-size:1.3em;line-height:1.2em;margin-top:1em;margin-right:0;margin-left:10px;margin-bottom:10px;padding-bottom:10px;border-bottom:1px solid #000;}p{margin:1em 0;}a{-webkit-transition:all .2s linear;-moz-transition:all .2s linear;-o-transition:all .2s linear;transition:all .2s linear;color:#444;}a:hover{text-decoration:none;color:#6a6a6a;}.page-container{padding:2em;}.page-container .column-container{overflow:hidden;}.page-container .column-container .nav-container{float:left;width:200px;}.page-container .column-container .main-content{margin-left:220px;border-left:1px solid #000;padding-left:20px;padding-bottom:5em;}.error-page .main-content{border-left:0;padding-left:0;margin-left:0;}ul.nav{list-style:none;}ul.nav li{display:block;}ul.nav li a{text-decoration:none;display:block;min-height:1px;font-size:.8em;padding:.8em 10px;}ul.nav li:hover a{background-color:#fff;}footer{clear:both;border-top:1px solid #000;margin-top:20px;margin-left:10px;font-size:.7em;}
+/*
+html5doctor.com Reset Stylesheet
+v1.6.1
+Last Updated: 2010-09-17
+Author: Richard Clark - http://richclarkdesign.com
+Twitter: @rich_clark
+*/
+/* line 20, ../../../../sass/_reset.scss */
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+/* line 30, ../../../../sass/_reset.scss */
+body {
+  line-height: 1;
+}
+
+/* line 35, ../../../../sass/_reset.scss */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+/* line 39, ../../../../sass/_reset.scss */
+nav ul {
+  list-style: none;
+}
+
+/* line 43, ../../../../sass/_reset.scss */
+blockquote, q {
+  quotes: none;
+}
+
+/* line 48, ../../../../sass/_reset.scss */
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+/* line 53, ../../../../sass/_reset.scss */
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+/* change colours to suit your needs */
+/* line 62, ../../../../sass/_reset.scss */
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+
+/* change colours to suit your needs */
+/* line 69, ../../../../sass/_reset.scss */
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+
+/* line 76, ../../../../sass/_reset.scss */
+del {
+  text-decoration: line-through;
+}
+
+/* line 80, ../../../../sass/_reset.scss */
+abbr[title], dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+
+/* line 85, ../../../../sass/_reset.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* change border colour to suit your needs */
+/* line 91, ../../../../sass/_reset.scss */
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+/* line 100, ../../../../sass/_reset.scss */
+input, select {
+  vertical-align: middle;
+}
+
+/* line 5, ../../../../sass/_sample.scss */
+body {
+  font-size: 16px;
+  line-height: 1.2em;
+  font-family: Arial, sans-serif;
+  color: #111;
+  background-color: #f5f5f5;
+}
+
+/* line 14, ../../../../sass/_sample.scss */
+h1 {
+  font-size: 3em;
+  line-height: 1.2em;
+  margin: 0 0 0.5em 0;
+}
+
+/* line 21, ../../../../sass/_sample.scss */
+h2 {
+  font-size: 2em;
+  line-height: 1.2em;
+  margin: 1em 0 0.6em 0;
+}
+
+/* line 28, ../../../../sass/_sample.scss */
+h3 {
+  font-size: 1.5em;
+  line-height: 1.2em;
+  margin: 1em 0 0.5em 0;
+}
+
+/* line 35, ../../../../sass/_sample.scss */
+h4 {
+  font-size: 1.3em;
+  line-height: 1.2em;
+  margin-top: 1em;
+  margin-right: 0;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #000;
+}
+
+/* line 48, ../../../../sass/_sample.scss */
+p {
+  margin: 1em 0;
+}
+
+/* line 52, ../../../../sass/_sample.scss */
+a {
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  color: #444;
+}
+
+/* line 59, ../../../../sass/_sample.scss */
+a:hover {
+  text-decoration: none;
+  color: #6a6a6a;
+}
+
+/* line 64, ../../../../sass/_sample.scss */
+.page-container {
+  padding: 2em;
+}
+/* line 67, ../../../../sass/_sample.scss */
+.page-container .column-container {
+  overflow: hidden;
+}
+/* line 70, ../../../../sass/_sample.scss */
+.page-container .column-container .nav-container {
+  float: left;
+  width: 200px;
+}
+/* line 75, ../../../../sass/_sample.scss */
+.page-container .column-container .main-content {
+  margin-left: 220px;
+  border-left: 1px solid #000;
+  padding-left: 20px;
+  padding-bottom: 5em;
+}
+
+/* line 85, ../../../../sass/_sample.scss */
+.error-page .main-content {
+  border-left: 0;
+  padding-left: 0;
+  margin-left: 0;
+}
+
+/* line 92, ../../../../sass/_sample.scss */
+ul.nav {
+  list-style: none;
+}
+/* line 95, ../../../../sass/_sample.scss */
+ul.nav li {
+  display: block;
+}
+/* line 98, ../../../../sass/_sample.scss */
+ul.nav li a {
+  text-decoration: none;
+  display: block;
+  min-height: 1px;
+  font-size: 0.8em;
+  padding: 0.8em 10px;
+}
+/* line 106, ../../../../sass/_sample.scss */
+ul.nav li:hover a {
+  background-color: #fff;
+}
+
+/* line 112, ../../../../sass/_sample.scss */
+footer {
+  clear: both;
+  border-top: 1px solid #000;
+  margin-top: 20px;
+  margin-left: 10px;
+  font-size: 0.7em;
+}
